[gd_scene load_steps=3 format=3 uid="uid://ccw7w52qemm3q"]

[ext_resource type="Script" uid="uid://brbdf76ki0yfy" path="res://scripts/GameFlashReact.gd" id="1_qhx4h"]
[ext_resource type="AudioStream" uid="uid://l3dsfx4k8wyq" path="res://assets/se/maou_se_voice_human03.mp3" id="2_nstwc"]

[node name="FlashReact" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhx4h")

[node name="LabelMensagem" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 81.5
offset_right = 20.0
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Texto"

[node name="BotaoReagir" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 158.0
offset_right = 50.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
text = "Reagir"

[node name="TimerEspera" type="Timer" parent="."]

[node name="TimerReacao" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_nstwc")

[connection signal="pressed" from="BotaoReagir" to="." method="_on_botao_reagir_pressed"]
